infrastructure/flux/clusters/takehome/realworld/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realworld
  namespace: default
spec:
  minReadySeconds: 3
  replicas: 1
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: realworld
  template:
    metadata:
      labels:
        app: realworld
      annotations:
        "linkerd.io/inject": "enabled"
        "config.linkerd.io/proxy-cpu-request": "100m"
    spec:
      imagePullSecrets:
      - name: docker-ghcr
      containers:
      - name: realworld
        image: ghcr.io/juldanherglo/realworld:1.0.6 # {"$imagepolicy": "flux-system:realworld"}
        imagePullPolicy: IfNotPresent
        readinessProbe:
          httpGet:
            path: /
            port: http
        livenessProbe:
          httpGet:
            path: /
            port: http
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        resources:
          limits:
            cpu: 1000m
            memory: 768Mi
          requests:
            cpu: 100m
            memory: 256Mi
