infrastructure/flux/clusters/takehome/realworld/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: realworld
  namespace: realworld
spec:
  type: ClusterIP
  selector:
    app: realworld
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
