infrastructure/flux/clusters/takehome/realworld/alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  generation: 1
  name: realworld
  namespace: default
spec:
  ingressClassName: alb
  rules:
  - host: www.foo.com
    http:
      paths:
      - backend:
          service:
            name: realworld
            port:
              number: 3000
        path: /
        pathType: Prefix
