infrastructure/flux/clusters/takehome/realworld/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-staging
    kubernetes.io/ingress.class: nginx
  name: realworld
  namespace: default
spec:
  tls:
  - hosts:
    - realworld.takehome.local
    secretName: web-ssl
  rules:
  - host: realworld.takehome.local
    http:
      paths:
      - backend:
          service:
            name: realworld
            port:
              number: 3000
        path: /
        pathType: Prefix
